Fix nav li alignment between img & text

--- a/style.css
+++ b/style.css
@@ -494,6 +494,11 @@ section {
         justify-items: flex-start;
     }
 
+    .nav li {
+        display: flex;
+        align-items: center;
+    }
+
     nav li img {
         padding-right: var(--icn-gap);
     }
